Fixes to a MDEV-32257-like scenario to prove the orphan XA-"complete" does not binlog.